Try to flush less often to disk

Bundles flush with sync, avoid stall on nfs.

BUG: 501508